 Copyright (c) 2008 Nabeel Shahzad
 For more information, visit www.phpvms.net
	Forums: http://www.phpvms.net/forum
	Documentation: http://www.phpvms.net/docs

 phpVMS is licenced under the following license:
   Creative Commons Attribution Non-commercial Share Alike (by-nc-sa)
   View license.txt in the root, or visit:
		http://creativecommons.org/licenses/by-nc-sa/3.0/
---

Build 400 (Version 1.1.400)

  * FSACARS status updates and PIREPS support (thanks to Roger from www.fspaintshop.com for the icons!)
  * FSACARS configuration file automatically generated, specific to pilot (update your profile_main.tpl)
  * ACARS API so ACARS programs can be integrated through ACARS plugin
  * XML interface for custom applications (ACARS, flight data) and other data
  * Pilot pay! Pay rate adjustable to the rank (shows up in profile_main.tpl)
  * Schedules results improved (schedule_results.tpl), update to this!
  * Flight leg taken into account on checking schedule
  * Profile editing bugs fixed
  * Page deletes actually work (woo!)
  * Pilot deleted if registration is rejected
  * PIREP field insertion bug fixed
  * Registration anomolies (required fields marked with *)
  * PIREP submission fixed (missing flight leg)
  * Ranking fixes (ranks can be deleted)
  * Pages check for permission to view
  * Added statistical functionality:
  		StatsData::TotalFlights();
  		StatsData::TotalHours();
  		StatsData::PilotCount();
  		
  		Example:
  
  		<p>This VA has a total of <?php echo StatsData::TotalFlights();?> flights</p>
  		
  * New setting added: UNIT
  
		Config::Set('UNITS', 'mi'); // Your units: mi or km
		
		Add it to your local.config.php

Build 370 (Release!)

  * Bid deleted on PIREP submit
  * PIREP fields properly show in admin panel
  * PIREP fields can be edited
  * Airlines can be enabled/disabled (not deleted)
  * Airline names/ICAO can be changed
  * WYSIWYG editor for News and Pages
  * Default skin tweaks
  * Profile stats back (to be expanded)