@@ -106,4 +106,3 @@ if(function_exists('post_module_load'))
 	post_module_load();
 
 define('SKINS_PATH', LIB_PATH.'/skins/' . CURRENT_SKIN);
-?>
