@@ -1,3 +1,8 @@
+<script type="text/javascript">
+var map_center_lat = "<?php echo Config::Get('MAP_CENTER_LAT'); ?>";
+var map_center_lng = "<?php echo Config::Get('MAP_CENTER_LNG'); ?>";
+var map_type = <?php echo Config::Get('MAP_TYPE'); ?>;
+</script>
 <script type="text/javascript" src="<?php echo SITE_URL?>/lib/js/acarsmap.js"></script>
 <div class="mapcenter" align="center">
 	<div id="acarsmap" style="width:<?php echo  Config::Get('MAP_WIDTH');?>; height: <?php echo Config::Get('MAP_HEIGHT')?>"></div>
