@@ -43,45 +43,96 @@ if(!isset($_GET['force']))
 		exit;
 	}
 }
+
+/** 
+ * Run a sql file
+ */
+function sql_file_update($filename)
+{
+	# Table changes, other SQL updates
+	$sql_file = file_get_contents($filename);
+
+	for($i=0;$i<strlen($sql_file);$i++)
+	{
+		$str = $sql_file{$i};
+		
+		if($str == ';')
+		{
+			$sql.=$str;
+			
+			$sql = str_replace('phpvms_', TABLE_PREFIX, $sql);
+			
+			DB::query($sql);
+			
+			if(DB::errno() != 0 && DB::errno() != 1060)
+			{
+				echo '<p style="border-top: solid 1px #000; border-bottom: solid 1px #000; padding: 5px;">
+						There was an error, with the following message: <br /><br />
+						<span style="margin: 10px;"><i>"'.DB::error().' ('.DB::errno().')"</i></span><br /><br />
+						On the following query: <br /><br />
+						<span style="margin: 10px;"><i>'.$sql.'</i></span><br /><br />
+						Try running it manually<br />
+						</p>';
+			}
+			
+			$sql = '';
+		}
+		else
+		{
+			$sql.=$str;
+		}
+	}
+
+}
+
+/**
+ * Add an entry into the local.config.php file
+ */
+function add_to_config($name, $value)
+{
+	$config = file_get_contents(CORE_PATH.'/local.config.php');
+	
+	# Replace the closing PHP tag, don't need a closing tag
+	$config = str_replace('?>', '', $config);
+	
+	# If it exists, don't add it
+	if(strpos($config, $name) !== false)
+	{
+		return false;
+	}
+	
+	$config = $config ."
+Config::Set('$name', '$value');";
+
+	file_put_contents(CORE_PATH.'/local.config.php', $config);
+}
+
 // Do the queries:
 echo "Starting the update...<br />
 	  Running SQL table updates...<br />";
 
-# Table changes, other SQL updates
-$sql_file = file_get_contents(SITE_ROOT . '/install/update.sql');
 
-for($i=0;$i<strlen($sql_file);$i++)
+# Do updates based on version
+#	But cascade the updates
+
+switch(PHPVMS_VERSION)
 {
-	$str = $sql_file{$i};
+	case '1.0.370': # Update to 1.1.400
+		sql_file_update(SITE_ROOT . '/install/update_400.sql');
+		
+		add_to_config('UNITS', 'mi');
+		
+	case '1.1.400':
 	
-	if($str == ';')
-	{
-		$sql.=$str;
+		echo 'Adding some options to your config file...';
 		
-		$sql = str_replace('phpvms_', TABLE_PREFIX, $sql);
+		add_to_config('MAP_CENTER_LAT', '45.484400');
+		add_to_config('MAP_CENTER_LNG', '-62.334821');
 		
-		DB::query($sql);
-		
-		if(DB::errno() != 0 && DB::errno() != 1060)
-		{
-			echo '<p style="border-top: solid 1px #000; border-bottom: solid 1px #000; padding: 5px;">
-					There was an error, with the following message: <br /><br />
-					<span style="margin: 10px;"><i>"'.DB::error().' ('.DB::errno().')"</i></span><br /><br />
-					On the following query: <br /><br />
-					<span style="margin: 10px;"><i>'.$sql.'</i></span><br /><br />
-					Try running it manually<br />
-					</p>';
-		}
-		
-		$sql = '';
-	}
-	else
-	{
-		$sql.=$str;
-	}
+		break;
 }
 
-# Version update
+# Final version update
 $sql = 'UPDATE `phpvms_settings` 
 			SET value=\''.UPDATE_VERSION.'\' 
 			WHERE name=\'PHPVMS_VERSION\'';
