@@ -25,7 +25,7 @@ $(document).ready(function() { if (GBrowserIsCompatible())
 {
 	map = new GMap2(document.getElementById("acarsmap"));
 
-    map.setCenter(new GLatLng(45.484400, -62.334821), 13, G_PHYSICAL_MAP);
+    map.setCenter(new GLatLng(map_center_lat , map_center_lng), 13, map_type);
     var bds = new GLatLngBounds(new GLatLng(37.4639564, -123.58687772), 
 								new GLatLng(53.5048436, -1.08276428));
 								
